<resources>
    <string name="app_name">BulletJournalApp</string>
    <string name="enter_email">enter email</string>
    <string name="enter_password">enter password</string>
    <string name="login">LogIn</string>
    <string name="register_new_user">Register new user</string>
    <string name="resend_verification_email">Resend Verification email</string>
    <string name="enter_name">enter name</string>
    <string name="enter_birth_date">enter birth date</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="confirm_password">confirm password</string>
    <string name="future_log">Future Log</string>
    <string name="collections">Collections</string>
    <string name="journal_pages">Journal Pages</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="habit_tracker">Habit Tracker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="tabian_consulting_logo">Tabian Consulting Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="email">Email</string>
    <string name="employee_dashboard">Employee Dashboard</string>
    <string name="this_week_s_initiatives">This week\'s initiatives</string>
    <string name="employee_schedule">Employee Schedule</string>
    <string name="company_culture">Company Culture</string>
    <string name="tabian_consulting_sales_chart">Tabian Consulting Sales Chart</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign out</string>
    <string name="account_settings">Account Settings</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot password</string>
    <string name="addcollection">AddCollection</string>

    <!--Firebase database nodes-->
    <string name="db_user">users</string>
    <string name="db_collection">collection</string>
    <string name="dummy_data">Dummy Data</string>
    <string name="no_journal_entry_warning">No journal entries present for today</string>
    <string name="to_do">TO DO</string>
</resources>
